--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,3 +1,8 @@
+---
+
+---
+@import "main";
+
 body {
     /* font-family: 'Libre Baskerville', serif; */
     font-family: 'Roboto Mono', monospace;
@@ -5,7 +10,10 @@ body {
 }
 
 .header {
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 100px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .header-heading {
@@ -27,4 +35,15 @@ body {
     padding: 10px;
     border: 1px solid black;
     margin: 5px;
+}
+
+.content {
+    clear: both;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 50px;
+}
+
+.post-content {
+    margin-top: 100px;
 }
