--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,15 +2,12 @@
     <head>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/assets/css/styles.css" />
+        <script src="/assets/js/navigationHelper.js"></script>
     </head>
     <body>
-        <!-- To be moved to _includes and use _data files for navigation -->
-        <div class="header">
-            <div class="header-heading">Maruthi Mohan</div>
-            <div class="header-work">Work</div>
-            <div class="header-blog">Blog</div>
-        </div>
+        {% include header.html %}
         <div class="content">
             {{ content }}
         </div>
