--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -4,37 +4,64 @@
 @import "main";
 
 body {
-    /* font-family: 'Libre Baskerville', serif; */
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Libre Baskerville', serif;
+    // font-family: 'Roboto Mono', monospace;
+    // font-family: 'Dosis', sans-serif;
     margin: 0px 20%;
 }
 
 .header {
-    margin-top: 5px;
+    margin-top: 25px;
     margin-bottom: 100px;
     margin-left: 5px;
     margin-right: 5px;
+
+    &::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+
+    .header-heading {
+        cursor: pointer;
+        margin: 5px;
+        float: left;
+        line-height: 22px;
+        font-size: 30px;
+        background: black;
+        color: white;
+        padding: 10px;
+
+        &:hover {
+            background: white;
+            color: black;
+        }
+    }
+
+    .header-menu-item {
+        cursor: pointer;
+        float: right;
+        padding: 10px;
+        border: 1px solid black;
+        margin: 5px;
+
+        &:hover {
+            background: black;
+            color: white;
+        }
+    }
 }
 
-.header-heading {
-    margin: 5px;
-    float: left;
-    line-height: 43px;
-    font-size: 43px;
-}
+.home {
+    
+    .title {
+        font-size: 40px;
+        margin-bottom: 50px;
+    }
 
-.header-blog {
-    float:      right;
-    padding:    10px;
-    border:     1px solid black;
-    margin: 5px;
-}
-
-.header-work {
-    float:  right;
-    padding: 10px;
-    border: 1px solid black;
-    margin: 5px;
+    .information {
+        line-height: 26px;
+    }
 }
 
 .content {
