--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,27 @@
 <div class="header">
-    <div class="header-heading" onclick="navigateToURL('/')">Maruthi Mohan</div>
-    <div class="header-menu-item" onclick="navigateToURL('/about')">About</div>
-    <div class="header-menu-item" onclick="navigateToURL('/work')">Work</div>
-    <div class="header-menu-item" onclick="navigateToURL('/blog')">Blog</div>
+    <div class="header-title" onclick="navigateToURL('/')">Maruthi Mohan</div>
+
+    <div 
+        {% if page.url == "/about/" %} 
+            class="header-menu-item active" 
+            {% else %}
+                class="header-menu-item"
+        {% endif %} 
+        onclick="navigateToURL('/about')">About</div>
+    
+    <div 
+        {% if page.url == "/work/" %} 
+            class="header-menu-item active" 
+            {% else %}
+                class="header-menu-item"
+        {% endif %} 
+        onclick="navigateToURL('/work')">Work</div>
+    
+    <div 
+        {% if page.url == "/blog/" %} 
+            class="header-menu-item active" 
+            {% else %}
+                class="header-menu-item"
+        {% endif %} 
+        onclick="navigateToURL('/blog')">Blog</div>
 </div>
