--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Roboto+Mono:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;800&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Arima&family=Fira+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Inter&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Inter&family=Titillium+Web&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/assets/css/styles.css" />
         <script src="/assets/js/navigationHelper.js"></script>
     </head>
@@ -13,6 +13,9 @@
         {% include header.html %}
         <div class="content">
             {{ content }}
+        </div>
+        <div class="footer">
+            Copyright &copy; 2022 Maruthi Mohan. All Rights Reserved
         </div>
     </body>
 </html>
