--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -13,11 +13,14 @@ $inconsolata-font: 'Inconsolata', monospace;
 $inter-font: 'Inter', sans-serif;
 $roboto: 'Roboto Mono', monospace;
 $fira-sans: 'Fira Sans', sans-serif;
+$titilium-web: 'Titillium Web', sans-serif;
 
 body {
     font-family: $inter-font;
-    margin: 5px 15%;
+    margin: 0px 15%;
     background-color: #ffffff;
+    position: relative;
+    min-height: 95vh;
 }
 
 .header {
@@ -25,7 +28,7 @@ body {
     margin-bottom: 100px;
     margin-left: 5px;
     margin-right: 5px;
-    font-size: 22px;
+    font-size: 20px;
 
     &::after {
         content: "";
@@ -112,6 +115,10 @@ body {
     .fun-fact {
         margin: 20px 5px;
     }
+}
+
+.footer {
+    margin: 15px 10px;
 }
 
 .content {
