Adding work page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,12 @@
             {{ content }}
         </div>
         <div class="footer">
-            Copyright &copy; 2022 Maruthi Mohan. All Rights Reserved
+            <div class="footer--createdby">
+                Created with 
+                <a href="https://jekyllrb.com/" target="_blank" rel="noopener">Jekyll</a> and 
+                <a href="https://www.netlifycms.org/" target="_blank" rel="noopener">Netlify CMS</a> 
+            </div>
+            <div class="footer--copyright">Copyright &copy; 2022 Maruthi Mohan. All Rights Reserved</div> 
         </div>
     </body>
 </html>
